src/test/ui/liveness/liveness-move-in-loop.nll.stderr
error[E0382]: use of moved value: `y`
  --> $DIR/liveness-move-in-loop.rs:11:25
   |
LL |                     x = y; //~ ERROR use of moved value
   |                         ^ value moved here, in previous iteration of loop
   |
   = note: move occurs because `y` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
